objects/items_Google_Drive__x.object
<CustomObject>
    <externalDataSource>Google_Drive</externalDataSource>
    <externalName>items_Google_Drive</externalName>
    <fields>
        <fullName>Author__c</fullName>
        <externalDeveloperName>Author</externalDeveloperName>
        <label>Author</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <externalDeveloperName>Comment</externalDeveloperName>
        <label>Comment</label>
        <length>32000</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContentLength__c</fullName>
        <externalDeveloperName>ContentLength</externalDeveloperName>
        <label>ContentLength</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreationDate__c</fullName>
        <externalDeveloperName>CreationDate</externalDeveloperName>
        <label>CreationDate</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DownloadUrl__c</fullName>
        <externalDeveloperName>DownloadUrl</externalDeveloperName>
        <label>DownloadUrl</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>IsFolder__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsFolder</externalDeveloperName>
        <label>IsFolder</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MimeType__c</fullName>
        <externalDeveloperName>MimeType</externalDeveloperName>
        <label>MimeType</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Name</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <externalDeveloperName>ParentId</externalDeveloperName>
        <label>ParentId</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpdateDate__c</fullName>
        <externalDeveloperName>UpdateDate</externalDeveloperName>
        <label>UpdateDate</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UpdatedBy__c</fullName>
        <externalDeveloperName>UpdatedBy</externalDeveloperName>
        <label>UpdatedBy</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <label>items_Google_Drive</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Name__c</columns>
        <columns>DisplayUrl</columns>
        <columns>Author__c</columns>
        <columns>ContentLength__c</columns>
        <columns>IsFolder__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Folders</fullName>
        <columns>Name__c</columns>
        <columns>DisplayUrl</columns>
        <columns>Author__c</columns>
        <columns>CreationDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsFolder__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Folders</label>
    </listViews>
    <pluralLabel>items_Google_Drive</pluralLabel>
</CustomObject>